--- a/public/css/index.css
+++ b/public/css/index.css
@@ -117,14 +117,14 @@
 
   <!--      Використовуйте цей селектор :out-of-range --> */
 .lesson-four-task-sixteen .bg-secondary:out-of-range {
-  background: red;
+  background: red !important;
 }
 /* <!--    Є форма з полем вводу числа, яке може бути від 0 до 100.
   Задача змінити колір фону на червоний, якщо значення входять до діапазону від 0 до 100. -->
 
 <!--      Використовуйте цей селектор :in-range--> */
 .lesson-four-task-seventeen .bg-secondary:in-range {
-  background-color: red;
+  background-color: red !important;
 }
 /* <!--    Завдання №18.У цьому завданні потрібно зробити, щоб змінювався колір фону placeholder на червоний ,
   який зникає, коли користувач починає вводити. -->
