--- a/public/css/template-1.css
+++ b/public/css/template-1.css
@@ -15,6 +15,7 @@
 }
 .header {
   padding: 24px;
+  border-bottom: 1px solid #dee2e6;
 }
 .divider {
   margin: 0px;
@@ -50,6 +51,7 @@
 }
 .footer {
   padding: 24px 0;
+  border-top: 1px solid #dee2e6;
 }
 .footer_copyright {
   margin-top: 12px;
@@ -115,4 +117,10 @@
   width: 100%;
   font-size: 19px;
   padding: 9px;
+}
+/* .card {
+  border-bottom: 1px solid red;
+} */
+.plans_card:nth-child(2) > .card {
+  visibility: visible;
 }
