--- a/src/container/template-1.hbs
+++ b/src/container/template-1.hbs
@@ -11,7 +11,7 @@
           </div>
         </nav>
       </header>
-      {{>divider}}
+
     </div>
     {{!-- hero section --}}
     <div class="page_block">
@@ -29,8 +29,8 @@
     </div>
     {{!-- footer --}}
     <div class="page_block">
-      {{>divider}}
-      <footer class="row footer">
+
+      <footer class="row g-0 footer">
         <div class="col-3">
           {{> logo}}
           <span class="footer_copyright">Copyright 2023-2024</span>
