--- a/public/css/template-3.css
+++ b/public/css/template-3.css
@@ -32,6 +32,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 80px;
 }
 /* ============================ */
 .logo {
@@ -77,6 +78,8 @@
 .footer {
   padding: var(--space-24) 0;
   border-top: 1px solid #dee2e6;
+  display: flex;
+  justify-content: space-between;
 }
 
 .footer_copyright {
