--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -18,11 +18,6 @@
     content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 
-
-
-
-
-
   <link href='css/normalize.css' rel='stylesheet' />
 
   <link href='css/slack.css' rel='stylesheet' />
@@ -40,12 +35,12 @@
               team and your work</h1>
             <p class="hero_info">All the features of Slack work together so you can, too.</p>
             <div class="hero_buttons">
-              <a href="" class="button button_primary">Try for free</a>
-              <a href="" class="button button_secondary">See all features</a>
+              <a href="" class="button button_primary click">Try for free</a>
+              <a href="" class="button button_secondary click">See all features</a>
             </div>
           </div>
           <div class="hero_right_wrapper">
-            <img src="/img/hero.png" alt="Hero image" class="hero_image">
+            <img src="/img/hero.png" alt="Hero Image" class="hero_image">
           </div>
         </div>
         <div class="brands">
@@ -60,7 +55,166 @@
         </div>
       </div>
     </section>
+    <section class="page_section page_section_light">
+      <div class="page_content features_section">
+        <h2 class="features_title">Work more easily with everyone</h2>
+        <p class="features_description">Stay on the same page and make decisions faster by bringing all of your
+          work communication into one place.</p>
 
+        <div class="features_grid_4">
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/connect.svg)"></span>
+            <strong class="feat_card_title">Slack Connect</strong>
+            <p class="feat_card_description">Collaborate with teams at other companies the same way you do with teams at
+              your own.</p>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/channels.svg)"></span>
+            <strong class="feat_card_title">Channels</strong>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/huddles.svg)"></span>
+            <strong class="feat_card_title">Huddles</strong>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/clips.svg)"></span>
+            <strong class="feat_card_title">Clips</strong>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/connect.svg)"></span>
+            <strong class="feat_card_title">Channels</strong>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/connect.svg)"></span>
+            <strong class="feat_card_title">Channels</strong>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+
+          <div class="feat_card">
+            <span class="icon feat_icon" style="background-image: url(svg/feature/connect.svg)"></span>
+            <strong class="feat_card_title">Channels</strong>
+            <a href="#" class="icon arrow_icon feat_link click"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page_section page_section_light">
+      <div class="page_content advantages_section">
+        <div class="advantages_wrapper_3">
+          <h2 class="adv_title">What you need, when you need it</h2>
+          <p class="adv_description">Spend less time shuffling tabs with a comprehensive message archive and
+            all your work tools at your fingertips.</p>
+          <div class="adv_grid_wrapper">
+            <div class="adv_card_wrapper">
+              <div class="feat_card adv_card">
+                <span class="icon feat_icon" style="background-image: url(svg/adv/apps.svg)"></span>
+                <strong class="feat_card_title">Apps and Integrations</strong>
+                <p class="feat_card_description">Streamline work by connecting
+                  Slack with other services like
+                  Google Drive, Office 365 and
+                  over 2,200 more.</p>
+                <a href="#" class="icon arrow_icon feat_link click"></a>
+              </div>
+
+              <div class="feat_card adv_card">
+                <span class="icon feat_icon" style="background-image: url(svg/adv/workflow.svg)"></span>
+                <strong class="feat_card_title">Workflow Builder</strong>
+                <p class="feat_card_description">Automate routine actions and
+                  communication, so you can get
+                  back to the kind of work only
+                  humans can do.</p>
+                <a href="#" class="icon arrow_icon feat_link click"></a>
+              </div>
+
+              <div class="feat_card adv_card">
+                <span class="icon feat_icon" style="background-image: url(svg/adv/search.svg)"></span>
+                <strong class="feat_card_title">Search</strong>
+                <a href="#" class="icon arrow_icon feat_link click"></a>
+              </div>
+
+              <div class="feat_card adv_card">
+                <span class="icon feat_icon" style="background-image: url(svg/adv/sharing.svg)"></span>
+                <strong class="feat_card_title">File sharing</strong>
+                <a href="#" class="icon arrow_icon feat_link click"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="page_section">
+      <div class="medium_wrapper review_container">
+        <div class="review_image_wrapper"></div>
+        <div class="review_wrapper">
+          <p class="review_text">“The thing that keeps us connected
+            the most is Slack. It’s a very
+            immediate and straightforward
+            method of communication, and
+            really the only channel that people
+            prefer and enjoy using.”</p>
+          <img src="/img/review/deliveroo.png" alt="" class="review_logo">
+          <span class="review_name">Will Sprunt, CIO, Deliveroo</span>
+        </div>
+      </div>
+    </section>
+
+    <section class="page_section">
+      <div class="medium_wrapper blog_container">
+        <h2 class="blog_heading">Explore more about working in Slack</h2>
+        <div class="blog_wrapper">
+          <div class="article_card">
+            <div class="article_image" style="background-image: url(/img/blog/slack101.png);"></div>
+            <div class="article_bottom_wrapper">
+              <span class="article_tag">Slack Tutorials</span>
+              <strong class="article_title">Slack 101</strong>
+              <a href="#" class="lern_more click">
+                <div class="article_link">Learn more</div>
+                <img src="/svg/arrow_link.svg" alt="link arrow">
+              </a>
+            </div>
+
+          </div>
+          <div class="article_card">
+            <div class="article_image" style="background-image: url(/img/blog/slack102.png);"></div>
+            <div class="article_bottom_wrapper">
+              <span class="article_tag">Slack vs. Email</span>
+              <strong class="article_title">An easier, more
+                organized way to work</strong>
+              <a href="#" class="lern_more click">
+                <div class="article_link">Learn more</div>
+                <img src="/svg/arrow_link.svg" alt="link arrow">
+              </a>
+            </div>
+          </div>
+          <div class="article_card">
+            <div class="article_image" style="background-image: url(/img/blog/slack103.png);"></div>
+            <div class="article_bottom_wrapper">
+              <span class="article_tag">Customer Stories</span>
+              <strong class="article_title">How Fastly uses Slack
+                Connect to wow
+                enterprise customers</strong>
+              <a href="#" class="lern_more click">
+                <div class="article_link">Learn more</div>
+                <img src="/svg/arrow_link.svg" alt="link arrow">
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
   </div>
 </body>
